k8s/overlays/prod/empty-dir-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: pechka
spec:
  template:
    spec:
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: pechka
spec:
  template:
    spec:
      volumes:
        - name: data
          emptyDir: {}
